// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalendarApp has calendars should render calendar items correctly 1`] = `
<div
  className="Content"
>
  <div
    className="Calendars"
  >
    <Connect(Calendar)
      calendar={
        Object {
          "date": Object {
            "month": 0,
            "year": 2018,
          },
        }
      }
    />
    <Connect(Calendar)
      calendar={
        Object {
          "date": Object {
            "month": 1,
            "year": 2018,
          },
        }
      }
    />
  </div>
  <Connect(Upcoming)
    events={
      Array [
        Object {
          "id": 1,
          "title": "Event 1",
        },
      ]
    }
  />
  <Connect(EventDetails) />
</div>
`;

exports[`CalendarApp has no calendars should render calendar items correctly 1`] = `
<div
  className="Content"
>
  <div
    className="Calendars"
  >
    
  </div>
  <Connect(Upcoming)
    events={Array []}
  />
  <Connect(EventDetails) />
</div>
`;
